# daemonizer

./: .gitignore  .travis.yml  AUTHORS  COPYRIGHT  ChangeLog  Makefile.in  NEWS  config.h.in  configure  configure.ac  daemonizer.1.in  daemonizer.c  daemonizer.spec.in  testd.c
.github/workflows/: codeql-analysis.yml  codespell.yml
daemonizer/: AUTHORS  ChangeLog  DEVELOPMENT  Makefile.am  README  TODO  configure.ac  daemonizer.1.in  daemonizer.c  daemonizer.h  daemonizer.spec  daemonizer.spec.in  testd.c
svnaccess.dir/: svnaccess
trunk/daemonizer/: AUTHORS  ChangeLog  Makefile.am  NEWS  TODO  configure.ac  daemonizer.c  daemonizer.h  daemonizer.spec  regen.sh
